added css to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-        <title> Project </title>
+        <title> Project </title>i
+        <link type="text/css" href="style.css">
     </head>
     <body>
         Hello World!
