cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> Project </title>i
+        <title> Project </title>
         <link type="text/css" href="style.css">
     </head>
     <body>
