--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
         <title> Project </title>
-        <link type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        Hello World!
+        <div id="container">
+            Hello World!
+        </div>
     </body>
 
 </html>
